--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
                       Creative digital marketing of two years of management experience. dvanced experience of marketing to provide unique ideas and campaigns that can reach target audiences. Self-motivated student with strong communication skills to provide patients with the best care among the teams
                     </p>
                     <p class="lead">
-                      Currently persuing bechalor degree to achive my goals
-                    </p>
+                      Towards success story                    </p>
                    
                   </div>
                 </div>
@@ -196,9 +195,8 @@
               <div class="service-content">
                 <h2 class="s-title">Photography</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Cool aesthetic photography that will need to make website beautifull and attractive
+
                 </p>
               </div>
             </div>
@@ -211,9 +209,7 @@
               <div class="service-content">
                 <h2 class="s-title">Responsive Design</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Thanks for stopping by my PeoplePerHour profile. I'm your go-to expert for all things website design, development, logo design, and branding. With a passion for creativity and a knack for turning ideas into reality, I'm here to bring your vision to life. Whether you need a stunning website, a memorable logo, or a comprehensive branding strategy, I've got the skills and expertise to deliver exceptional results. I take pride in my attention to detail, commitment to client satisfaction, and dedication to creating digital experiences that leave a lasting impact.
                 </p>
               </div>
             </div>
@@ -241,9 +237,8 @@
               <div class="service-content">
                 <h2 class="s-title">Marketing Services</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                 I have very good communication and understanding and will make sure that your ideas are implemented in your project the way that you want.
+And at the end of the work, I will make sure that you are completely satisfied with the service and that my services are up to your expectations.
                 </p>
               </div>
             </div>
