--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Md Azharuddin</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>stfuazzo@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>+91 8235556222</span></p>
+                        <p><span class="title-s">Email: </span> <span>heylol@gmail.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>+91 123456789</span></p>
                       </div>
                     </div>
                   </div>
